@@ -1,5 +1,14 @@
 2010-02-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Add option `--disable-check-coma' for other packages.
+
+	Since the COMA simulation may need to be avoided even if
+	available, provide a flag to disable it explicitly.
+
+	* build-aux/slctests.m4: Support new flag.
+
+2010-02-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Small optimization in run-time library.
 
 	* tools/include/svp/testoutput.h: Output using `unsigned
